--- a/www/html/chat.html
+++ b/www/html/chat.html
@@ -11,6 +11,6 @@
       <textarea rows="10" cols="70" style="resize:none" readonly></textarea>
     </div>
     
-    To a <a href="index.html">home</a> page.
+    To a <a href="home">home</a> page.
   </body>
 </html>
