--- a/www/html/index.html
+++ b/www/html/index.html
@@ -7,7 +7,7 @@
 
     <h2>Home</h2>
 
-    To a <a href="reg.html">registration</a> page.
+    To a <a href="reg">registration</a> page.
 
     <p id="test-field"></p>
     <script type="text/javascript">
