--- a/www/html/reg.html
+++ b/www/html/reg.html
@@ -6,7 +6,7 @@
     <h1>SyncMessage</h1>
 
     <h2>Registration</h2>
-        <script src="/js/auth.js"></script>
+        <script src="auth"></script>
 
     <form id="regform" action="javascript:void(0);">
         Nickname: <input type="text" name="nickname"><br>
@@ -15,6 +15,6 @@
 
     <p id="approvement"></p>
     <br>
-    To a <a href="index.html">home</a> page.
+    To a <a href="home">home</a> page.
   </body>
 </html>
