--- a/www/html/reg.html
+++ b/www/html/reg.html
@@ -6,7 +6,7 @@
     <h1>SyncMessage</h1>
 
     <h2>Registration</h2>
-        <script src="auth"></script>
+        <script src="js/auth.js"></script>
 
     <form id="regform" action="javascript:void(0);">
         Nickname: <input type="text" name="nickname"><br>
