[#6] Added password field to reg form and hashing functionality

--- a/www/html/reg.html
+++ b/www/html/reg.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>SyncMessage</title>
@@ -9,7 +10,8 @@
         <script src="js/register.js"></script>
 
     <form id="regform" action="javascript:void(0);">
-        Nickname: <input type="text" name="nickname"><br>
+        Nickname: <input type="text" name="nickname" placeholder="Enter Nickname"><br>
+        Password: <input type="password" name="passwd" placeholder="Enter Password"><br>
         <input type="button" onclick="submitNickname()" value="Go!">
     </form>
 
