[#9] paths in html fixed

--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,13 @@
 <html>
   <head>
     <title>SyncMessage</title>
-    <script src="js/login.js"></script>
+    <script src="/js/login.js"></script>
   </head>
 
   <body bgcolor=white>
     <h1>SyncMessage</h1>
     <br>
-    <a href="reg">Create account</a>
+    <a href="/reg/">Create account</a>
     <div id="logNickname" align="right" hidden=""></div>
     <button id= "logOutButton" onclick="logOut()" hidden="">Log out</button>
     <br><br>
