--- a/www/reg/index.html
+++ b/www/reg/index.html
@@ -7,7 +7,7 @@
     <h1>SyncMessage</h1>
 
     <h2>Registration</h2>
-        <script src="js/register.js"></script>
+        <script src="/js/register.js"></script>
 
     <form id="regform" action="javascript:void(0);">
         Nickname: <input type="text" name="nickname" placeholder="Choose Nickname"><br>
@@ -17,6 +17,6 @@
 
     <p id="approvement"></p>
     <br>
-    To a <a href="home">home</a> page.
+    To a <a href="/">home</a> page.
   </body>
 </html>
