--- a/www/about/index.html
+++ b/www/about/index.html
@@ -25,7 +25,9 @@
     <!-- Header part -->
     <!-- Content part -->
       <div class="content">
-        <p>Any other chatpage content here</p>
+        <p>This is our adventurous project of full-stack web app creation!</p>
+        <p>Our project on <a href="https://github.com/aleasims/bicycle">GitHub</a>.</p>
+        <p>Thanks to mom, dad and ofc <a href="https://twitter.com/mossobyanin">Sergey Semyonovich Sobianin</a>.</p>
       </div>
     <!-- Content part -->
     </div>
