--- a/www/chat/index.html
+++ b/www/chat/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Bicycle chat</title>
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/homepage.css">
     <script type="text/javascript" src="/js/auth.js"></script>
+    <script type="text/javascript" src="/js/chat.js"></script>
   </head>
   <body>
     <div class="central">
@@ -25,6 +25,8 @@
     <!-- Header part -->
     <!-- Content part -->
       <div class="content">
+        <div id="leftSection"></div>
+        <div id="rightSection"></div>
         <p>Any other chatpage content here</p>
       </div>
     <!-- Content part -->
