--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Bicycle chat</title>
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/homepage.css">
     <script type="text/javascript" src="/js/auth.js"></script>
   </head>
   <body>
@@ -16,7 +15,7 @@
         <div class="menubar">
           <a class="menubutton" href="/">Home
           <a class="menubutton" href="/about">About
-          <a class="menubutton right" href="/" id="logOutButton" onclick="logOut()">Logout
+          <a class="menubutton right" id="logOutButton" onclick="logOut()">Logout
           <a class="menubutton right" href="/account" id="accImg">
             <img src="/img/acc_logo.png" height="20"></a>
           <a class="menubutton right" href="/reg" id="newAccButton">Create account</a>
