--- a/www/reg/index.html
+++ b/www/reg/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Bicycle chat</title>
     <link rel="stylesheet" href="/css/main.css">
+    <script type="text/javascript" src="/js/main.js"></script>
     <script type="text/javascript" src="/js/auth.js"></script>
   </head>
   <body>
@@ -14,11 +15,12 @@
         </div>
         <div class="menubar">
           <a class="menubutton" href="/">Home
-          <a class="menubutton" href="/about">About
-          <a class="menubutton right" href="/" id="logOutButton" onclick="logOut()">Logout
+          <a class="menubutton" href="/about/">About
+          <a class="menubutton" href="/chat/" id="chatReference">Chat
+          <a class="menubutton right" id="logOutButton" onclick="logOut()">Logout
           <a class="menubutton right" href="/account" id="accImg">
             <img src="/img/acc_logo.png" height="20"></a>
-          <a class="menubutton right" href="/reg" id="newAccButton">Create account</a>
+          <a class="menubutton right" href="/reg/" id="newAccButton">Create account</a>
         </div>
       </div>
     <!-- Header part -->
@@ -38,6 +40,6 @@
       </div>
     <!-- Content part -->
     </div>
-    <script type="text/javascript">checkSsid();</script>
+    <script type="text/javascript">checkSsid(controlElements);</script>
   </body>
 </html>
