--- a/www/chat/index.html
+++ b/www/chat/index.html
@@ -63,10 +63,10 @@
       });
     </script>
     <script type="text/javascript">
-      var node = document.getElementById("msgInp");
-      node.addEventListener("keyup", function(event) {
+      var input = document.getElementById("msgInp");
+      input.addEventListener("keyup", function(event) {
           if (event.keyCode == 13) {
-              alert('hi');
+              sendMessage();
           }
       });
     </script>
