--- a/www/reg/content.html
+++ b/www/reg/content.html
@@ -2,9 +2,13 @@
   <div id="regformContainer" class="reg_form">
     <p style="margin-top: 0px;">Registration:</p>
     <form id="regForm" action="javascript:void(0);">
-      <input class="log_field" type="text" name="nickname" placeholder="Your Nickname">
+      <input class="log_field" type="text" name="email" placeholder="E-Mail">
       <br>
-      <input class="log_field" type="password" name="passwd" placeholder="Your Password">
+      <input class="log_field" type="text" name="nickname" placeholder="Nickname">
+      <br>
+      <input class="log_field" type="password" name="passwd" placeholder="Password">
+      <br>
+      <input class="log_field" type="password" name="passwd_rep" placeholder="Password again">
     </form>
     <button class="reg_button" onclick="registerUser()">Create account</button>
   </div>
